show userlogin and after that a first gamemanagment Screen